# bayesian-harmonic-analysis

./: .gitignore  README.md  pyproject.toml
data/: after_1.json  after_2.json  before_1.json  before_2.json  template.csv  template.json
docs/: guide.md  make_readme_figures.py
docs/knowledge/: 00-index.md  01-methodology.md  02-bic-model-selection.md  03-amplitude-modulation.md  04-spectral-diagnostics.md  05-before-after-comparison.md  06-glossary-and-sources.md  07-qa-audit.md  08-input-schema.md  09-gap-research.md
examples/: demo.ipynb
src/: README.md
src/harmonix/: __init__.py  core.py  metrics.py  model.py  plotting.py  series.py
tests/: conftest.py  harmonics_ref.py  pytest.ini  test_harmonics.py  test_model.py
