[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonix"
version = "0.1.0"
description = "Bayesian harmonic-pair decomposition for longitudinal before/after testing and forecasting of time series"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
excel = ["openpyxl>=3.1"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
